# Marmalade

./: .env  .gitignore  .pylintrc  CONTRIBUTING.md  README.md  com.github.geoffreycoulaud.JellyfinGTK.json  com.github.geoffreycoulaud.Marmalade.json  meson.build  python3-jellyfin-api-client.json  python3-jellyfin-api.json  python3-requirements.json  requirements.dev.txt  requirements.txt
data/: com.github.geoffreycoulaud.JellyfinGTK.appdata.xml.in  com.github.geoffreycoulaud.JellyfinGTK.desktop.in  com.github.geoffreycoulaud.JellyfinGTK.gschema.xml  com.github.geoffreycoulaud.Marmalade.desktop.in  com.github.geoffreycoulaud.Marmalade.gschema.xml  meson.build
data/icons/: meson.build
jellyfin/: .gitignore  README.md  requirements.txt
po/: POTFILES  meson.build
src/: access_token_store.py  bookmarked_collections.py  build_constants.py.in  jellyfin-gtk.gresource.xml  jellyfin-gtk.in  jellyfin.py  main.py  marmalade.gresource.xml.in  marmalade.in  meson.build  reactive_set.py  server.py  server_home_view.py  server_store.py  servers_view.py  shared.py  simple.py  store.py  task.py  window.py
src/components/: abc_navigation_page.py  auth_credentials_view.py  auth_dialog.py  auth_login_method_view.py  auth_quick_connect_view.py  auth_user_select_view.py  disconnect_dialog.py  item_card.py  list_box_row.py  list_box_row_content.py  list_store_item.py  loading_view.py  marmalade_navigation_page.py  scrollable_shelf.py  server_add_dialog.py  server_auth_dialog.py  server_browser.py  server_browser_headerbar.py  server_browser_view.py  server_connected_view.py  server_home_page.py  server_home_view.py  server_loading_view.py  server_navigation_item.py  server_page.py  server_row.py  server_unreachable_view.py  servers_list_row.py  servers_list_view.py  servers_view.py  shelf.py  shelf_page.py  user_badge.py  user_picker.py  user_picker_page.py  utils.py  widget_builder.py  widget_factory.py  window.py
src/css/: style.css
src/database/: api.py  database.py
src/database/migrations/: v0_init_database.sql  v1_cascade_tokens.sql  v2_server_timestamps.sql  v3_users_table.sql  v4_tokens_device_id.sql
src/gtk/: server_home_view.blp  window.blp
src/logging/: session_file_handler.py  setup.py
src/templates/: auth_credentials_view.blp  auth_dialog.blp  auth_login_method_view.blp  auth_quick_connect_view.blp  auth_user_select_view.blp  disconnect_dialog.blp  item_card.blp  list_box_row_content.blp  loading_view.blp  scrollable_shelf.blp  server_add_dialog.blp  server_auth_dialog.blp  server_browser_headerbar.blp  server_browser_view.blp  server_connected_view.blp  server_home_page.blp  server_home_view.blp  server_loading_view.blp  server_navigation_item.blp  server_row.blp  server_unreachable_view.blp  servers_list_row.blp  servers_list_view.blp  servers_view.blp  shelf.blp  shelf_page.blp  user_badge.blp  user_picker.blp  user_picker_page.blp  window.blp
